wiki-game/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
        - name: microservice
          image: redhat/ubi8-minimal:8.8
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 2m
              memory: 4Mi
            limits:
              cpu: 50m
              memory: 50Mi
