wiki-game/base/deployment_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
   annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8081'
    prometheus.io/path: '/actuator/prometheus'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikigame-api
  template:
    metadata:
      labels:
        app: wikigame-api
    spec:
      containers:
        - name: api
          image: registry.hub.docker.com/lasher23/wiki-game-api:dce677e6
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
