wiki-game/base/deployment_ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikigame-ui
  template:
    metadata:
      labels:
        app: wikigame-ui
    spec:
      containers:
        - name: ui
          image: registry.hub.docker.com/lasher23/wiki-game-ui:dce677e6
          ports:
            - containerPort: 8000
              protocol: TCP
          # resources:
          #   requests:
          #     cpu: 1m
          #     memory: 1Mi
          #   limits:
          #     cpu: 2m
          #     memory: 2Mi
