wiki-game/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice
spec:
  type: NodePort 
  selector:
    app: microservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
