wiki-game/base/service_api-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikigame-metrics
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '8081'
    prometheus.io/path: '/actuator/prometheus'
spec:
  type: ClusterIP
  selector:
    app: wikigame-api
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
