wiki-game/base/service_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikigame-api
spec:
  type: ClusterIP
  selector:
    app: wikigame-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
