wiki-game/base/service_ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikigame-ui
spec:
  type: NodePort 
  selector:
    app: wikigame-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
